--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
     <h4>Skills</h4>
     <ul>
     <li>HTML 5
-      <i class="fa fa-star" aria-hidden="true"></i>    
-      <i class="fa fa-star" aria-hidden="true"></i>
-       <i class="fa fa-star" aria-hidden="true"></i>
-       <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star checked" aria-hidden="true"></i>    
+      <i class="fa fa-star checked" aria-hidden="true"></i>
+       <i class="fa fa-star checked" aria-hidden="true"></i>
+       <i class="fa fa-star checked" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i>
        </li>
     <li>CSS 3
-      <i class="fa fa-star" aria-hidden="true"></i>    
-      <i class="fa fa-star" aria-hidden="true"></i>
-       <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star checked3" aria-hidden="true"></i>    
+      <i class="fa fa-star checked3" aria-hidden="true"></i>
+       <i class="fa fa-star checked3" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i>
     </li>
-    <li>JavaScript<i class="fa fa-star" aria-hidden="true"></i>    
-      <i class="fa fa-star" aria-hidden="true"></i>
+    <li>JavaScript<i class="fa fa-star checked2" aria-hidden="true"></i>    
+      <i class="fa fa-star checked2" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i></li>
     <li>Git
-      <i class="fa fa-star" aria-hidden="true"></i>    
-      <i class="fa fa-star" aria-hidden="true"></i>
-       <i class="fa fa-star" aria-hidden="true"></i>
+      <i class="fa fa-star checked3" aria-hidden="true"></i>    
+      <i class="fa fa-star checked3" aria-hidden="true"></i>
+       <i class="fa fa-star checked3" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i>
        <i class="fa fa-star" aria-hidden="true"></i>
     </li>
